# rust-functions-example

./: Cargo.toml  netlify.toml
netlify/functions/api/: Cargo.toml
netlify/functions/api/src/: main.rs
netlify/functions/hello/: Cargo.toml
netlify/functions/hello/src/: main.rs
src/: lib.rs  main.rs
