[package]
edition = "2018"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.7.0"
http = "0.2.4"
lambda_runtime = "0.7.0"
log = "0.4.14"
simple_logger = "4.0.0"
tokio = "1.6.1"
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
lambda-web = { git = "https://github.com/MrToy/lambda-web", features=["rocket05"] }
project = { path = "../../../" }